--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,6 @@
 #  CSharp formatting rules:
 [*.cs]
 csharp_new_line_before_open_brace = none
-
-# Shader formatting rules:
-[*.shader]
-csharp_new_line_before_open_brace = none
+csharp_new_line_before_else = false
+csharp_new_line_before_catch = false
+csharp_new_line_before_finally = false
