--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,10 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+*.shader.meta
+*.cs.meta
+*.compute.meta
+*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
