--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,4 @@ csharp_new_line_before_open_brace = none
 csharp_new_line_before_else = false
 csharp_new_line_before_catch = false
 csharp_new_line_before_finally = false
+dotnet_sort_system_directives_first = true
